# WS20-CG-Pra-Dungeon-Crawler

./: .gitignore  CMakeLists.txt  IDEA.md  LICENSE  TODO.md
Core/Dungeon/: CMakeLists.txt
Core/Dungeon/gui/: MainWindow.cpp  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.hpp
Core/Dungeon/res/: index.qrc
Core/Dungeon/res/glsl/: Material.fs.glsl  Material.vs.glsl  index.qrc  trivial.vs.glsl  trivial_red.fs.glsl
Core/Dungeon/res/materials/: BlackGranite.qrc  BlackOstrichHideWrinkles2.qrc  BrokenLimestoneBrickPath.qrc  ChunkyWetGravelAndDirt.qrc  Clay01.qrc  CrackedRedCeramicRoof.qrc  DirtyHammeredCopper.qrc  PileOfSkulls.qrc  WhiteWoolCloth.qrc  WoolWovenCarpetStripedBurgundy.qrc  index.qrc
Core/Dungeon/res/materials/gametextures/: README.md
Core/Dungeon/src/: main.cpp
Core/Dungeon/src/asset/: Asset.cpp  Asset.hpp  Drawable.cpp  Drawable.hpp  Material.cpp  Material.hpp  Mvm.cpp  Mvm.hpp  Program.cpp  Program.hpp  Util.cpp  Util.hpp  Vao.cpp  Vao.hpp
Core/Dungeon/src/common/: FileUtil.cpp  FileUtil.hpp
Core/Dungeon/src/engine/: Entity.hpp  Game.cpp  Game.hpp
Core/Dungeon/src/engine/component/: DynamicCollisionComponent.hpp  GlBlendMaterialComponent.hpp  GlMaterialComponent.hpp  GlPointLightComponent.hpp  GlRenderComponent.hpp  PositionComponent.hpp  TranslationComponent.hpp
Core/Dungeon/src/engine/service/: CollisionService.cpp  CollisionService.hpp  RenderService.cpp  RenderService.hpp
Core/Dungeon/src/game/: Statistics.hpp
Core/Dungeon/src/geometries/: Geometries.cpp  Geometries.hpp  Plane.hpp  PlaneBottom.hpp  Sphere.hpp
Core/Dungeon/src/gui/: Drawable.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.hpp
Core/Dungeon/src/shader/: Assets.cpp  Assets.hpp  Program.cpp  Program.hpp  Texture.cpp  Texture.hpp  Util.cpp  Util.hpp
cmake/: conan.cmake  deployqt.cmake  set_compile_options.cmake  set_compile_warnings.cmake  target_resources.cmake
core/assets/: CMakeLists.txt
core/assets/asrc/gltf/: LoadSkinnedMesh.hpp  Types.hpp
core/assets/inc/asset/: Asset.hpp
core/assets/inc/geometries/: Plane.hpp  Sphere.hpp
core/assets/inc/resource/: PbrMaterial.hpp  UnrealPbrMaterial.hpp
core/assets/res/: README.md
core/assets/res/glsl/: Animated_PBR.vs.glsl  Material.fs.glsl  Material.vs.glsl  PBR.fs.glsl  PBR.vs.glsl  Shadow.fs.glsl  Shadow.gs.glsl  Shadow.vs.glsl  ShadowAni.vs.glsl  SkinnedMesh.fs.glsl  SkinnedMesh.vs.glsl  TrivialRed.fs.glsl
core/assets/src/: AnimationVao.cpp  GlMaterialComponent.cpp  Material.cpp  Program.cpp  Skin.cpp  Vao.cpp
core/dungeon/: CMakeLists.txt
core/dungeon/res/glsl/: Material.vs.glsl  PBR.vs.glsl
core/dungeon/res/materials/gametextures/: LICENSE.md  README.md
core/dungeon/src/: Main.cpp
core/dungeon/src/asset/: Asset.hpp  Drawable.cpp  Drawable.hpp  Material.cpp  Material.hpp  Program.cpp  Program.hpp  Vao.hpp
core/dungeon/src/engine/: Game.hpp
core/dungeon/src/engine/component/: GlBlendMaterialComponent.hpp  GlPointLightComponent.hpp  GlRenderComponent.hpp  StaticCollisionComponent.hpp
core/dungeon/src/engine/service/: CollisionService.cpp  CollisionService.hpp  RenderService.cpp
core/dungeon/src/geometries/: Sphere.hpp
core/dungeon/src/gui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.hpp  Scene001.hpp
core/engine/: CMakeLists.txt
core/engine/inc/engine/: Engine.hpp  Entity.hpp  Game.hpp  Util.hpp
core/engine/inc/engine/component/: AnimatedModelComponent.hpp  DynamicCollisionCircle.hpp  GlMaterialComponent.hpp  GlPointLightComponent.hpp  GlRenderComponent.hpp  PositionComponent.hpp  StaticCollisionCircle.hpp  StaticCollisionLine.hpp
core/engine/inc/engine/memory/: StaticTree.hpp
core/engine/inc/engine/service/: AnimationService.hpp  AnimatorService.hpp  CollisionService.hpp  RenderService.hpp  ShadowMapService.hpp
core/engine/inc/model/: GlSkinnedMesh.hpp  HeapArray.hpp  Skin.hpp  SkinAnimation.hpp  SkinAnimator.hpp  SkinBlendAnimator.hpp  SkinTransitionAnimator.hpp  SkinnedMesh.hpp
core/engine/src/: CollisionService.cpp  RenderService.cpp  ShadowMapService.cpp
tools/from_dea/: CMakeLists.txt
tools/from_dea/dae/: bone0.dae  pile.dae
tools/from_dea/inc/: AnimatedMesh.hpp  DaeLoader.hpp
tools/from_dea/src/: DaeLoader.cpp  Main.cpp
tools/from_unreal_pbr/: CMakeLists.txt  Main.cpp
tools/resource/: CMakeLists.txt  NOTES.txt
